--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         </script>
         <script src="ui.js"></script>
         <a href="www.meshine.tech">
-            <img style="position: relative; top:0 ; left:90% ; border:0 ; height: 20%;" src="https://photo-example.s3.amazonaws.com/logo_1024.png" alt="">
+            <img style="position: absolute; top:0 ; left:90% ; border:0 ; height: 20%;" src="https://photo-example.s3.amazonaws.com/logo_1024.png" alt="">
         </a>
     </body>
 </html>
